--- a/less/modules/searchNew/SearchOverlay.less
+++ b/less/modules/searchNew/SearchOverlay.less
@@ -25,14 +25,14 @@
 		box-shadow: 0 1px 5px 0 rgba(117, 117, 117, .5);
 
 		li {
-			padding-left: @overlayButtonSize + @overlayHeadingMarginH;
+			padding-left: @overlayHeight + @overlayHeadingMarginH;
 		}
 
 		.listThumb {
-			// for @overlayButtonSize to work properly
+			// for @overlayHeight to work properly
 			// FIXME: why is this needed?
 			font-size: 1em;
-			width: @overlayButtonSize;
+			width: @overlayHeight;
 		}
 
 		h2 {
